_includes/css/agency.css
/* ... */
.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.btn-xl .badge {
    color: #{{ site.color.primary }};
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
    min-height: 32px
}

.navbar-default .navbar-brand {
    padding-top: 10px;
    height: 50px;
    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
    color: #{{ site.color.primary }};
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: Proxima Nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    padding-top: 10px;
    padding-bottom: 5px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.color.secondary }};
}

@media(min-width:320px) {
    .navbar {
        padding-right: 0px;
        margin-right: 0px;
    }
    .navbar-nav {
        background-color: grey;
    }
    .navbar-default {
        padding: 20px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        padding: 20px;
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 0px 0;
        background-color: #222;
        height: 60px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
    .navbar-nav {
        background-color: transparent;
    }
    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
        height: 60px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background: linear-gradient(rgba(0, 0, 0, 0.13), rgba(0, 0, 0, 0.13));
    background-image: url("/img/california-city-fog-lr.jpg");
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height: 100vh;
}

header .intro-text {
    padding-top: 175px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif", "Helvetica Neue",Helvetica, sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 50px;
    text-transform: uppercase;
    font-family: Proxima Nova,"Helvetica Neue",Helvetica, sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

header .social-networks {
    height: 75px;
    margin-bottom: 50px;
}

header ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: rgba(0,0,0,0);
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

header .video {
    z-index: -1;
    position: absolute;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

header .video video {
    min-width: 100%;
    min-height: 100%;
    background-size: cover;
}

header .intro-image {
    margin-bottom: 10px;
}

header .intro-image img {
    width: 100px;
    border-radius: 50px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
}
/* ... */

